--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "grommet": "^2.28.0",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^2.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,9 +20,11 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
